[package]
name = "glhello"
version = "0.1.0"
authors = ["Jamie Nicol"]
edition = "2018"

[package.metadata.android]
build_targets = ["armv7-linux-androideabi", "i686-linux-android"]
opengles_version_major = 3
opengles_version_minor = 0

[dependencies]
gleam = "0.6.17"
glutin = "0.21.0"

# Running wrench on android built with master cargo-apk results in a crash
# due to a mismatched version of android_glue (a dependency of winit).
# Override it to use a suitable version of android_glue.
# See https://github.com/rust-windowing/android-rs-glue/issues/239.
# This can be removed once a new version of android_glue is published to crates.io.
[patch.crates-io]
android_glue = { git = "https://github.com/rust-windowing/android-rs-glue.git", rev = "e3ac6edea5814e1faca0c31ea8fac6877cb929ea" }
